# bobtester

./: pyproject.toml  readme.md
bobtester/: __init__.py  backtest.py  condition.py  manipulate.py  normalize.py
bobtester/logic/: __init__.py  backtest.py  condition.py  normalize.py
logic/: __init__.py  manipulate.py
src/bobtester/logic/: condition.py
src/bobtester/scripts/: plot.py
src/logic/: backtest.py  normalize.py
