[tool.pyright]
venv = ".venv"
venvPath = "."

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bobtester"
version = "0.1.0"
description = "Options backtesting framework for crypto strategies"
authors = [{ name = "CordilleraDev", email = "amrith@cordillera.dev" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["pandas", "matplotlib"]
python_requires = ">=3.6"
